--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
     </div>
 
 
-    <div class="container bg-secondary">
+    <div class="container bg-secondary porto">
         <h2 class="text-center">Portfolio</h2>
         <div class="row pic">
 
             <div class="col-lg-4 col-sm-8">
                 <a href="https://prexsplay.github.io/YG/">
-                    <img class="img-thumbnail img-fluid" src="https://github.com/prexsplay/MyImages/blob/master/Screenshot%20(3).png?raw=true"
+                    <img class="img-thumbnail img-fluid rounded" src="https://github.com/prexsplay/MyImages/blob/master/Screenshot%20(3).png?raw=true"
                         target="_blank" alt="">
                 </a>
             </div>
 
             <div class="col-lg-4 col-sm-8">
                 <a href="https://prexsplay.github.io/Project-I/">
-                    <img class="img-thumbnail img-fluid" src="https://github.com/prexsplay/MyImages/blob/master/Screenshot%20(2).png?raw=true"
+                    <img class="img-thumbnail img-fluid rounded" src="https://github.com/prexsplay/MyImages/blob/master/Screenshot%20(2).png?raw=true"
                         target="_blank" alt="">
                 </a>
             </div>
 
             <div class="col-lg-4 col-sm-8">
                 <a href="https://prexsplay.github.io/myfirstbootsrappage/">
-                    <img class="img-thumbnail img-fluid" src="https://github.com/prexsplay/MyImages/blob/master/Screenshot%20(1).png?raw=true"
+                    <img class="img-thumbnail img-fluid rounded" src="https://github.com/prexsplay/MyImages/blob/master/Screenshot%20(1).png?raw=true"
                         target="_blank" alt="">
                 </a>
             </div>
@@ -90,7 +90,7 @@
     </div>
 
     <div class="container bg-dark contact">
-        <h2 class="text-center">Contact</h2>
+        <h2 class="text-center co">Contact</h2>
         
 
         <div class="row d-flex justify-content-around">
@@ -102,19 +102,19 @@
 
             <div>
                 <a href="https://linkedin.com/in/prexsplay" target="_blank">
-                    <button type="button" class="btn btn-success"><i class="fab fa-linkedin"></i></button>
+                    <button type="button" class="btn btn-primary"><i class="fab fa-linkedin"></i></button>
                 </a>
             </div>
 
             <div>
                 <a href="https://www.instagram.com/prexsplay/" target="_blank">
-                    <button type="button" class="btn btn-success"><i class="fab fa-instagram"></i></button>
+                    <button type="button" class="btn btn-primary"><i class="fab fa-instagram"></i></button>
                 </a>
             </div>
 
             <div>
                 <a href="https://www.facebook.com/PREXSPLAY" target="_blank">
-                    <button type="button" class="btn btn-success"><i class="fab fa-facebook"></i></button>
+                    <button type="button" class="btn btn-primary"><i class="fab fa-facebook"></i></button>
                 </a>
             </div>
         </div>
