--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class=" navbar navbar-expand-lg navbar-light bg-info navbar fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">PreXsplay</a>
+            <a class="navbar-brand" href="#">Prexsplay</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -95,8 +95,8 @@
 
         <div class="row d-flex justify-content-around">
             <div>
-                <a href="https://prexsplay.com/" target="_blank">
-                    <button type="button" class="btn btn-success">My Music Website</button>
+                <a href="https://soundcloud.com/prexsmusic/sets" target="_blank">
+                    <button type="button" class="btn btn-success">My Music</button>
                 </a>
             </div>
 
