--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="text-center text">
             At Prexplay,
             <br>We are concerned with providing the best multimedia services and products...
-            <br> ranging from website design and creation, audio and music production, graphic design, artist management...etc!
+            <br> ranging from website design and creation, audio and music production, graphic design, artist management and other media related services!
         </div>
     </div>
 
